--- a/lessons/00_Turtles/05a_Loops.ipynb
+++ b/lessons/00_Turtles/05a_Loops.ipynb
@@ -58,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop Iteration 0\n",
+      "Loop Iteration 1\n",
+      "Loop Iteration 2\n",
+      "Loop Iteration 3\n"
+     ]
+    }
+   ],
    "source": [
     "# For loop; try ganing the number of iterations to 6\n",
     "for i in range(4):\n",
@@ -107,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
