--- a/lessons/00_Turtles/01_Get_Started.ipynb
+++ b/lessons/00_Turtles/01_Get_Started.ipynb
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello 👋 World 🌎 ! Today is August 29, 2024\n"
+      "Hello 👋 World 🌎 ! Today is September 03, 2024\n"
      ]
     }
    ],
@@ -131,11 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 👋 World 🌎 ! Today is September 03, 2024-Jude\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your Hello World code below\n",
+    "import datetime\n",
+    "\n",
+    "date = datetime.date.today().strftime(\"%B %d, %Y\")\n",
+    "s = F\"Hello 👋 World 🌎 ! Today is {date}-Jude\"\n",
+    "\n",
+    "\n",
+    "print(s)# Write your Hello World code below\n",
     "\n"
    ]
   },
@@ -218,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
