--- a/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
+++ b/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
@@ -95,19 +95,19 @@
     "\n",
     "# Is b less than 20?\n",
     "\n",
-    "...\n",
+    "print(b<20)\n",
     "\n",
     "# Is c equal to the *integer* 30?\n",
     "\n",
-    "...\n",
+    "print(c == 30)\n",
     "\n",
     "# Is c equal to the *string* '30'?\n",
     "\n",
-    "...\n",
+    "print(c == '30')\n",
     "\n",
     "# Is a equal to b minus 5?\n",
     "\n",
-    "...\n"
+    "print(a == b-5)\n"
    ]
   },
   {
@@ -183,14 +183,14 @@
     "\n",
     "# if a is 10 and the last word in s is 'world' print 'success'\n",
     "\n",
-    "if ...:\n",
+    "if a == 10 and :\n",
     "    print(...)\n",
     "\n",
     "\n",
     "# If the integer value of c is 30 or b is evenly divisible by 5, print 'success'\n",
     "\n",
-    "if ...:\n",
-    "    print(...)\n",
+    "if c == 30 or b % 5 == 0:\n",
+    "    print('success')\n",
     "\n",
     "\n"
    ]
