--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -37,7 +37,9 @@
    "outputs": [],
    "source": [
     "# Display all numbers from 0 to 100 \n",
-    "\n"
+    "\n",
+    "for i in range(0, 101):\n",
+    "    print(i)"
    ]
   },
   {
@@ -60,7 +62,9 @@
    "outputs": [],
    "source": [
     "# Display all numbers from 100 to 0 \n",
-    "\n"
+    "\n",
+    "for i in range(101, 0):\n",
+    "    print(i)"
    ]
   },
   {
@@ -83,7 +87,9 @@
    },
    "outputs": [],
    "source": [
-    "# Display all even numbers from 2 to 100  \n"
+    "# Display all even numbers from 2 to 100  \n",
+    "for i in range(2, 101, 2):\n",
+    "    print(i)"
    ]
   },
   {
@@ -106,7 +112,9 @@
    },
    "outputs": [],
    "source": [
-    "# Display all odd numbers from 1 to 99  "
+    "# Display all odd numbers from 1 to 99  \n",
+    "for i in range(1, 100, 2):\n",
+    "    print(i)"
    ]
   },
   {
@@ -133,7 +141,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display all numbers from 1 to 500."
+    "# Display all numbers from 1 to 500.\n",
+    "\n",
+    "for i in range(1, 501):\n",
+    "    print(i)"
    ]
   },
   {
@@ -154,7 +165,10 @@
    },
    "outputs": [],
    "source": [
-    "# Display all multiples of 7 from 0 to 777"
+    "# Display all multiples of 7 from 0 to 777\n",
+    "\n",
+    "for i in range(0, 71, 7):\n",
+    "    print(i)"
    ]
   },
   {
