--- a/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
+++ b/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
@@ -398,9 +398,9 @@
     "# Test yourself\n",
     "\n",
     "current_year = '2024' # Change to the current year. \n",
-    "birth_year = '1999' # Change to your birth year\n",
+    "birth_year = '2014' # Change to your birth year\n",
     "\n",
-    "age = ... # Calculate the age\n",
+    "age = 10 # Calculate the age\n",
     "\n",
     "print(\"You are \", age, \" years old in decimal\")\n",
     "\n",
@@ -433,13 +433,13 @@
    "source": [
     "# Test yourself\n",
     "\n",
-    "kids = ...\n",
-    "candy_bars = ...\n",
+    "kids = 5\n",
+    "candy_bars = 15\n",
     "\n",
-    "candy_per_kid = ...  # Calculate the number of candy bars each kid gets\n",
+    "candy_per_kid = 3  # Calculate the number of candy bars each kid gets\n",
     "print(\"Each kid gets \", candy_per_kid, \" candy bars\")\n",
     "\n",
-    "candy_left_over = ...  # Calculate the number of candy bars left over\n",
+    "candy_left_over = 0  # Calculate the number of candy bars left over\n",
     "print(\"There are \", candy_left_over, \" candy bars left over\")\n",
     "\n"
    ]
