--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -130,8 +130,7 @@
     " 2 is even  \n",
     " 3 is odd  \n",
     " 4 is even  \n",
-    " 5 is odd...etc.  \n",
-    "\n"
+    " 5 is odd...etc.  \n"
    ]
   },
   {
@@ -191,7 +190,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Code Here"
+    "# Your Code Here\n",
+    "\n",
+    "for i in range(2014, 2025):\n",
+    "    "
    ]
   },
   {
@@ -208,13 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "beb062f6",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) (0,1) (0,2) (0,3) (0,4) (0,5) (0,6) (0,7) \n",
+      "(1,0) (1,1) (1,2) (1,3) (1,4) (1,5) (1,6) (1,7) \n",
+      "(2,0) (2,1) (2,2) (2,3) (2,4) (2,5) (2,6) (2,7) \n",
+      "(3,0) (3,1) (3,2) (3,3) (3,4) (3,5) (3,6) (3,7) \n",
+      "(4,0) (4,1) (4,2) (4,3) (4,4) (4,5) (4,6) (4,7) \n",
+      "(5,0) (5,1) (5,2) (5,3) (5,4) (5,5) (5,6) (5,7) \n",
+      "(6,0) (6,1) (6,2) (6,3) (6,4) (6,5) (6,6) (6,7) \n",
+      "(7,0) (7,1) (7,2) (7,3) (7,4) (7,5) (7,6) (7,7) \n"
+     ]
+    }
+   ],
    "source": [
     "# Examples of Nested Loops\n",
     "\n",
@@ -248,15 +265,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8c847ed3",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) \n",
+      "(1,0) \n",
+      "(2,0) \n",
+      "(3,0) \n",
+      "(4,0) \n",
+      "(5,0) \n",
+      "(6,0) \n",
+      "(7,0) \n",
+      "(8,0) \n"
+     ]
+    }
+   ],
    "source": [
-    "# Display the output shown above"
+    "# Display the output shown above\n",
+    "for i in range(9):\n",
+    "    for j in range(1):\n",
+    "        print(f\"({i},{j})\", end= ' ')\n",
+    "    print()"
    ]
   },
   {
@@ -277,15 +314,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bb0a4a5b",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) (1,0) (2,0) \n",
+      "(0,1) (1,1) (2,1) \n",
+      "(0,2) (1,2) (2,2) \n"
+     ]
+    }
+   ],
    "source": [
-    "# Display the numbers 1 through 9 in a 3x3 square grid"
+    "# Display the numbers 1 through 9 in a 3x3 square grid\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        print(f\"({j},{i})\", end= ' ')\n",
+    "    print()\n",
+    "        "
    ]
   },
   {
@@ -300,15 +352,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ced82638",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0) (0,1) (0,2) (0,3) (0,4) (0,5) (0,6) (0,7) (0,8) (0,9) \n",
+      "(1,0) (1,1) (1,2) (1,3) (1,4) (1,5) (1,6) (1,7) (1,8) (1,9) \n",
+      "(2,0) (2,1) (2,2) (2,3) (2,4) (2,5) (2,6) (2,7) (2,8) (2,9) \n",
+      "(3,0) (3,1) (3,2) (3,3) (3,4) (3,5) (3,6) (3,7) (3,8) (3,9) \n",
+      "(4,0) (4,1) (4,2) (4,3) (4,4) (4,5) (4,6) (4,7) (4,8) (4,9) \n",
+      "(5,0) (5,1) (5,2) (5,3) (5,4) (5,5) (5,6) (5,7) (5,8) (5,9) \n",
+      "(6,0) (6,1) (6,2) (6,3) (6,4) (6,5) (6,6) (6,7) (6,8) (6,9) \n",
+      "(7,0) (7,1) (7,2) (7,3) (7,4) (7,5) (7,6) (7,7) (7,8) (7,9) \n",
+      "(8,0) (8,1) (8,2) (8,3) (8,4) (8,5) (8,6) (8,7) (8,8) (8,9) \n",
+      "(9,0) (9,1) (9,2) (9,3) (9,4) (9,5) (9,6) (9,7) (9,8) (9,9) \n"
+     ]
+    }
+   ],
    "source": [
-    "# Display the numbers 1 through 100 in a 10x10 square grid. "
+    "# Display the numbers 1 through 100 in a 10x10 square grid. \n",
+    "for i in range(10):\n",
+    "    for j in range(10):\n",
+    "        print(f\"({i},{j})\", end= ' ')\n",
+    "    print()"
    ]
   },
   {
@@ -354,7 +427,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
