--- a/lessons/00_Turtles/01_Get_Started.ipynb
+++ b/lessons/00_Turtles/01_Get_Started.ipynb
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello 👋 World 🌎 ! Today is September 03, 2024\n"
+      "Hello 👋 World 🌎 ! Today is October 21, 2024\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
