--- a/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
+++ b/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Is b less than 20?\n",
     "\n",
-    "print(b<20)\n",
+    "print(b < 20)\n",
     "\n",
     "# Is c equal to the *integer* 30?\n",
     "\n",
@@ -107,7 +107,7 @@
     "\n",
     "# Is a equal to b minus 5?\n",
     "\n",
-    "print(a == b-5)\n"
+    "print(a == b - 5)\n"
    ]
   },
   {
