--- a/lessons/02_Loops/02_Loops_with_Range.ipynb
+++ b/lessons/02_Loops/02_Loops_with_Range.ipynb
@@ -23,16 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'range'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run Me!\n",
     "\n",
     "a = range(10)\n",
     "\n",
     "print(type(a))\n",
-    "print(a)\n"
+    "list(a)\n"
    ]
   },
   {
@@ -46,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(range(10)))"
    ]
@@ -61,7 +87,7 @@
     "\n",
     "The `range()` actually can have one, two or three arguments. Here are the options: \n",
     "\n",
-    "* `range(end)`: producea numbers from 0 to `end`\n",
+    "* `range(end)`: produce a numbers from 0 to `end`\n",
     "* `range(start, end)`: produce numbers from `start` to `end`\n",
     "* `range(start, end, skip)`: produce numbers from `start` to `end`, skipping by `skip`\n",
     "\n",
@@ -70,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 103, 105, 107, 109, 111, 113, 115, 117, 119]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(101, 120, 2))"
    ]
@@ -92,13 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2013, 2015, 2017, 2019, 2021, 2023]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test yourself\n",
     "\n",
-    "print(range(2013, 2024, 2))"
+    "list(range(2013, 2024, 2))"
    ]
   },
   {
@@ -130,14 +178,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3 🍄 mushroom\n",
+      "4\n",
+      "5 🦡 badger\n",
+      "6 🍄 mushroom\n",
+      "7\n",
+      "8\n",
+      "9 🍄 mushroom\n",
+      "10 🦡 badger\n",
+      "11\n",
+      "12 🍄 mushroom\n",
+      "13\n",
+      "14\n",
+      "15 🐍 snake!\n",
+      "16\n",
+      "17\n",
+      "18 🍄 mushroom\n",
+      "19\n",
+      "20 🦡 badger\n",
+      "21 🍄 mushroom\n",
+      "22\n",
+      "23\n",
+      "24 🍄 mushroom\n",
+      "25 🦡 badger\n",
+      "26\n",
+      "27 🍄 mushroom\n",
+      "28\n",
+      "29\n",
+      "30 🐍 snake!\n"
+     ]
+    }
+   ],
    "source": [
     "# Badgers!\n",
     "\n",
     "for i in range(1, 31):\n",
-    "    ...\n",
+    "    if i % 15 == 0:\n",
+    "        print(i, '🐍 snake!')\n",
+    "    \n",
+    "    elif i % 5 == 0:\n",
+    "        print(i, '🦡 badger')\n",
+    "\n",
+    "    elif i % 3 == 0:\n",
+    "        print(i, '🍄 mushroom')\n",
+    "\n",
+    "    else:\n",
+    "        print(i)\n",
     " "
    ]
   },
@@ -151,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
