--- a/lessons/02_Loops/03a_Lists.ipynb
+++ b/lessons/02_Loops/03a_Lists.ipynb
@@ -332,12 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a6550d5f",
    "metadata": {
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['item 1', 'item 2', 'item 3', 'item 4', 'item 5']\n"
+     ]
+    }
+   ],
    "source": [
     "l = []\n",
     "\n",
@@ -418,7 +426,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
