--- a/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
+++ b/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,9 +281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int 1305\n",
+      "int 1305.32\n",
+      "octal 37\n",
+      "octal 37\n",
+      "hex 37\n",
+      "hex 37\n",
+      "binary 37\n",
+      "binary 37\n"
+     ]
+    }
+   ],
    "source": [
     "# String to integer and float\n",
     "\n",
