--- a/lessons/00_Turtles/11_Lists.ipynb
+++ b/lessons/00_Turtles/11_Lists.ipynb
@@ -72,9 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "oranges\n",
+      "bread\n",
+      "milk\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "things_to_buy = [ 'apples','oranges','bread','milk']\n",
@@ -144,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
