--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -29,12 +29,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d0752dd4",
    "metadata": {
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# Display all numbers from 0 to 100 \n",
     "\n",
@@ -54,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aec8cf23",
    "metadata": {
     "title": "[python]"
@@ -79,13 +187,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ed3d8616",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n",
+      "52\n",
+      "54\n",
+      "56\n",
+      "58\n",
+      "60\n",
+      "62\n",
+      "64\n",
+      "66\n",
+      "68\n",
+      "70\n",
+      "72\n",
+      "74\n",
+      "76\n",
+      "78\n",
+      "80\n",
+      "82\n",
+      "84\n",
+      "86\n",
+      "88\n",
+      "90\n",
+      "92\n",
+      "94\n",
+      "96\n",
+      "98\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# Display all even numbers from 2 to 100  \n",
     "for i in range(2, 101, 2):\n",
@@ -104,13 +269,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "038f48bf",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n",
+      "51\n",
+      "53\n",
+      "55\n",
+      "57\n",
+      "59\n",
+      "61\n",
+      "63\n",
+      "65\n",
+      "67\n",
+      "69\n",
+      "71\n",
+      "73\n",
+      "75\n",
+      "77\n",
+      "79\n",
+      "81\n",
+      "83\n",
+      "85\n",
+      "87\n",
+      "89\n",
+      "91\n",
+      "93\n",
+      "95\n",
+      "97\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
     "# Display all odd numbers from 1 to 99  \n",
     "for i in range(1, 100, 2):\n",
@@ -663,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "620b3886",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -684,14 +906,114 @@
       "49\n",
       "56\n",
       "63\n",
-      "70\n"
+      "70\n",
+      "77\n",
+      "84\n",
+      "91\n",
+      "98\n",
+      "105\n",
+      "112\n",
+      "119\n",
+      "126\n",
+      "133\n",
+      "140\n",
+      "147\n",
+      "154\n",
+      "161\n",
+      "168\n",
+      "175\n",
+      "182\n",
+      "189\n",
+      "196\n",
+      "203\n",
+      "210\n",
+      "217\n",
+      "224\n",
+      "231\n",
+      "238\n",
+      "245\n",
+      "252\n",
+      "259\n",
+      "266\n",
+      "273\n",
+      "280\n",
+      "287\n",
+      "294\n",
+      "301\n",
+      "308\n",
+      "315\n",
+      "322\n",
+      "329\n",
+      "336\n",
+      "343\n",
+      "350\n",
+      "357\n",
+      "364\n",
+      "371\n",
+      "378\n",
+      "385\n",
+      "392\n",
+      "399\n",
+      "406\n",
+      "413\n",
+      "420\n",
+      "427\n",
+      "434\n",
+      "441\n",
+      "448\n",
+      "455\n",
+      "462\n",
+      "469\n",
+      "476\n",
+      "483\n",
+      "490\n",
+      "497\n",
+      "504\n",
+      "511\n",
+      "518\n",
+      "525\n",
+      "532\n",
+      "539\n",
+      "546\n",
+      "553\n",
+      "560\n",
+      "567\n",
+      "574\n",
+      "581\n",
+      "588\n",
+      "595\n",
+      "602\n",
+      "609\n",
+      "616\n",
+      "623\n",
+      "630\n",
+      "637\n",
+      "644\n",
+      "651\n",
+      "658\n",
+      "665\n",
+      "672\n",
+      "679\n",
+      "686\n",
+      "693\n",
+      "700\n",
+      "707\n",
+      "714\n",
+      "721\n",
+      "728\n",
+      "735\n",
+      "742\n",
+      "749\n",
+      "756\n",
+      "763\n",
+      "770\n"
      ]
     }
    ],
    "source": [
     "# Display all multiples of 7 from 0 to 777\n",
     "\n",
-    "for i in range(0, 71, 7):\n",
+    "for i in range(0, 777, 7):\n",
     "    print(i)"
    ]
   },
@@ -753,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "beb062f6",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -764,24 +1086,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00 01 02 03 04 05 06 07 08 09 \n",
-      "10 11 12 13 14 15 16 17 18 19 \n",
-      "20 21 22 23 24 25 26 27 28 29 \n",
-      "30 31 32 33 34 35 36 37 38 39 \n",
-      "40 41 42 43 44 45 46 47 48 49 \n",
-      "50 51 52 53 54 55 56 57 58 59 \n",
-      "60 61 62 63 64 65 66 67 68 69 \n",
-      "70 71 72 73 74 75 76 77 78 79 \n",
-      "80 81 82 83 84 85 86 87 88 89 \n",
-      "90 91 92 93 94 95 96 97 98 99 \n"
+      "00 01 \n",
+      "10 11 \n"
      ]
     }
    ],
    "source": [
     "# Examples of Nested Loops\n",
     "\n",
-    "for i in range(10):\n",
-    "    for j in range(10):\n",
+    "for i in range(2):\n",
+    "    for j in range(2):\n",
     "        print(f\"{i}{j}\", end= ' ')\n",
     "    print()"
    ]
@@ -821,23 +1135,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0,0) \n",
-      "(0,1) \n",
-      "(0,2) \n",
-      "(0,3) \n",
-      "(0,4) \n",
-      "(0,5) \n",
-      "(0,6) \n",
-      "(0,7) \n",
-      "(0,8) \n"
+      " 00 \n",
+      " 10 \n",
+      " 20 \n",
+      " 30 \n",
+      " 40 \n",
+      " 50 \n",
+      " 60 \n",
+      " 70 \n",
+      " 80 \n"
      ]
     }
    ],
    "source": [
     "# Display the output shown above\n",
-    "for j in range(9):\n",
-    "    for i in range(1):\n",
-    "        print(f\"({i},{j})\", end= ' ')\n",
+    "for i in range(9):\n",
+    "    for j in range(1):\n",
+    "        print(f\" {j}\", end= ' ')\n",
     "    print()"
    ]
   },
@@ -859,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bb0a4a5b",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -870,17 +1184,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0) (0) (0) \n",
-      "(1) (1) (1) \n",
-      "(2) (2) (2) \n"
+      "0 1 2 3 \n",
+      "0 1 2 3 \n",
+      "0 1 2 3 \n"
      ]
     }
    ],
    "source": [
     "# Display the numbers 1 through 9 in a 3x3 square grid\n",
     "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        print(f\"({i})\", end= ' ')\n",
+    "    for j in range(4):\n",
+    "        print(f\"{j}\", end= ' ')\n",
     "    print()\n",
     "        "
    ]
@@ -897,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "ced82638",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -908,16 +1222,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0,0) (0,1) (0,2) (0,3) (0,4) (0,5) (0,6) (0,7) (0,8) (0,9) \n",
-      "(1,0) (1,1) (1,2) (1,3) (1,4) (1,5) (1,6) (1,7) (1,8) (1,9) \n",
-      "(2,0) (2,1) (2,2) (2,3) (2,4) (2,5) (2,6) (2,7) (2,8) (2,9) \n",
-      "(3,0) (3,1) (3,2) (3,3) (3,4) (3,5) (3,6) (3,7) (3,8) (3,9) \n",
-      "(4,0) (4,1) (4,2) (4,3) (4,4) (4,5) (4,6) (4,7) (4,8) (4,9) \n",
-      "(5,0) (5,1) (5,2) (5,3) (5,4) (5,5) (5,6) (5,7) (5,8) (5,9) \n",
-      "(6,0) (6,1) (6,2) (6,3) (6,4) (6,5) (6,6) (6,7) (6,8) (6,9) \n",
-      "(7,0) (7,1) (7,2) (7,3) (7,4) (7,5) (7,6) (7,7) (7,8) (7,9) \n",
-      "(8,0) (8,1) (8,2) (8,3) (8,4) (8,5) (8,6) (8,7) (8,8) (8,9) \n",
-      "(9,0) (9,1) (9,2) (9,3) (9,4) (9,5) (9,6) (9,7) (9,8) (9,9) \n"
+      "00 01 02 03 04 05 06 07 08 09 \n",
+      "10 11 12 13 14 15 16 17 18 19 \n",
+      "20 21 22 23 24 25 26 27 28 29 \n",
+      "30 31 32 33 34 35 36 37 38 39 \n",
+      "40 41 42 43 44 45 46 47 48 49 \n",
+      "50 51 52 53 54 55 56 57 58 59 \n",
+      "60 61 62 63 64 65 66 67 68 69 \n",
+      "70 71 72 73 74 75 76 77 78 79 \n",
+      "80 81 82 83 84 85 86 87 88 89 \n",
+      "90 91 92 93 94 95 96 97 98 99 \n"
      ]
     }
    ],
@@ -925,7 +1239,7 @@
     "# Display the numbers 1 through 100 in a 10x10 square grid. \n",
     "for i in range(10):\n",
     "    for j in range(10):\n",
-    "        print(f\"({i},{j})\", end= ' ')\n",
+    "        print(f\"{i}{j}\", end= ' ')\n",
     "    print()"
    ]
   },
