started fizz buzz

--- a/lessons/02_Loops/01_Iteration.ipynb
+++ b/lessons/02_Loops/01_Iteration.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the next lessons we'll learn about each of these terable types. "
+    "In the next lessons we'll learn about each of these iterable types. "
    ]
   },
   {
