--- a/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
+++ b/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
@@ -148,23 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m20\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma + b = \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b =  1020\n"
      ]
     }
    ],
    "source": [
-    "a = 10\n",
+    "a = \"10\"\n",
     "b = \"20\"\n",
     "print(\"a + b = \", a + b)"
    ]
@@ -393,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 % 3 ==  1\n",
+      "9 % 3 ==  0\n",
       "10 % 3 ==  1\n",
       "11 % 3 ==  2\n",
       "12 % 3 ==  0\n"
@@ -412,7 +408,7 @@
     "\n",
     "# Modulo Operator\n",
     "\n",
-    "print(\"9 % 3 == \" , 10 % 3 )\n",
+    "print(\"9 % 3 == \" , 9 % 3 )\n",
     "print(\"10 % 3 == \" , 10 % 3 )\n",
     "print(\"11 % 3 == \" , 11 % 3 )\n",
     "print(\"12 % 3 == \" , 12 % 3 )"
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -550,9 +546,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each kid gets  3  candy bars\n",
+      "There are  0  candy bars left over\n"
+     ]
+    }
+   ],
    "source": [
     "# Test yourself\n",
     "\n",
@@ -569,9 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "HelloHelloHello\n",
+      "H\n",
+      "o\n",
+      "1234 1234\n",
+      "Embed a variable |1234| in a string\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me\n",
     "# Things to do with Strings\n",
@@ -603,9 +621,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n",
+      "HELLO WORLD!\n",
+      "Hello World!\n",
+      "Hello Python!\n",
+      "['Hello', 'World!']\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me!\n",
     "\n",
@@ -641,9 +675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ellipsis\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Yourself\n",
     "\n",
@@ -651,8 +693,8 @@
     "name = ...  # Your name\n",
     "greet = ... # \n",
     "\n",
-    "hello3 = ... # make your hello string repeat three times\n",
-    "s = ... # Concatenate hello3, name and greet\n",
+    "hello3 = \"HelloHelloHello\" # make your hello string repeat three times\n",
+    "s =  ... # Concatenate hello3, name and greet\n",
     "titled = ... # Make it title case\n",
     "\n",
     "print(titled) # Print the string"
