--- a/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
+++ b/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
@@ -77,9 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Yourself\n",
     "\n",
@@ -157,9 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2136962173.py, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 23\u001b[0;36m\u001b[0m\n\u001b[0;31m    if a == 10 and :\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Yourself\n",
     "\n",
@@ -184,7 +205,7 @@
     "# if a is 10 and the last word in s is 'world' print 'success'\n",
     "\n",
     "if a == 10 and :\n",
-    "    print(...)\n",
+    "    print(a==5)\n",
     "\n",
     "\n",
     "# If the integer value of c is 30 or b is evenly divisible by 5, print 'success'\n",
@@ -329,7 +350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -343,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
