--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1040,25 +1040,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n",
-      "2021\n",
-      "2022\n",
-      "2023\n",
-      "2024\n"
+      "In 2014 I was 0 years old\n",
+      "In 2015 I was 1 years old\n",
+      "In 2016 I was 2 years old\n",
+      "In 2017 I was 3 years old\n",
+      "In 2018 I was 4 years old\n",
+      "In 2019 I was 5 years old\n",
+      "In 2020 I was 6 years old\n",
+      "In 2021 I was 7 years old\n",
+      "In 2022 I was 8 years old\n",
+      "In 2023 I was 9 years old\n",
+      "In 2024 I was 10 years old\n"
      ]
     }
    ],
    "source": [
     "# Your Code Here\n",
-    "\n",
     "for i in range(2014, 2025):\n",
-    "    print(i)"
+    "    age = i - 2014\n",
+    "    print(\"In \" +str(i)+ \" I was \" +str(age)+ \" years old\")"
    ]
   },
   {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "beb062f6",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1086,16 +1086,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00 01 \n",
-      "10 11 \n"
+      "00 01 02 03 04 05 06 07 \n",
+      "10 11 12 13 14 15 16 17 \n",
+      "20 21 22 23 24 25 26 27 \n",
+      "30 31 32 33 34 35 36 37 \n",
+      "40 41 42 43 44 45 46 47 \n",
+      "50 51 52 53 54 55 56 57 \n",
+      "60 61 62 63 64 65 66 67 \n",
+      "70 71 72 73 74 75 76 77 \n"
      ]
     }
    ],
    "source": [
     "# Examples of Nested Loops\n",
     "\n",
-    "for i in range(2):\n",
-    "    for j in range(2):\n",
+    "for i in range(8):\n",
+    "    for j in range(8):\n",
     "        print(f\"{i}{j}\", end= ' ')\n",
     "    print()"
    ]
@@ -1124,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "8c847ed3",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1135,23 +1141,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 00 \n",
-      " 10 \n",
-      " 20 \n",
-      " 30 \n",
-      " 40 \n",
-      " 50 \n",
-      " 60 \n",
-      " 70 \n",
-      " 80 \n"
+      " 0 0 \n",
+      " 0 1 \n",
+      " 0 2 \n",
+      " 0 2 \n",
+      " 1 2 \n",
+      " 2 2 \n",
+      " 3 2 \n",
+      " 4 2 \n",
+      " 5 2 \n"
      ]
     }
    ],
    "source": [
     "# Display the output shown above\n",
-    "for i in range(9):\n",
+    "for i in range(3):\n",
     "    for j in range(1):\n",
-    "        print(f\" {j}\", end= ' ')\n",
+    "        print(f\" {j} {i}\", end= ' ')\n",
+    "    print()\n",
+    "for f in range(6):\n",
+    "    for k in range (1):\n",
+    "        print(f\" {f} {i}\", end = ' ')\n",
     "    print()"
    ]
   },
