--- a/lessons/02_Loops/05_Strings.ipynb
+++ b/lessons/02_Loops/05_Strings.ipynb
@@ -152,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John is 14 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "# f-strings\n",
     "\n",
@@ -178,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOHN is 14 years old. In 5 years, he will be 19 years old.\n",
+      "With a seperator: 1,234,567.890123\n",
+      "Rounded to 2 places: 1234567.89\n",
+      "Hello     World     !\n"
+     ]
+    }
+   ],
    "source": [
     "# More F-Strings\n",
     "\n",
@@ -213,9 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dear John,\n",
+      "\n",
+      "Congratulations! You have won a unicorn in our prize draw. \n",
+      "You are only 14 years old, so you must be very lucky!\n",
+      "\n",
+      "Yours sincerely,\n",
+      "The Prize Draw Team\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me\n",
     "\n",
@@ -302,9 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'is', 'fun', 'to', 'learn']\n"
+     ]
+    }
+   ],
    "source": [
     "# Split on spaces\n",
     "m = \"Python is fun to learn\"\n",
