--- a/lessons/02_Loops/03c_Tuples.ipynb
+++ b/lessons/02_Loops/03c_Tuples.ipynb
@@ -53,9 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l [1] <class 'list'>\n",
+      "t (1,) <class 'tuple'>\n",
+      "nt 1 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "l = [1] # List\n",
     "t = (1,) # Tuple\n",
@@ -82,9 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "(3, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "t = (1, 2, 3, 4, 5) \n",
     "\n",
