--- a/lessons/02_Loops/03a_Lists.ipynb
+++ b/lessons/02_Loops/03a_Lists.ipynb
@@ -32,18 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9280847b",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n"
+     ]
+    }
+   ],
    "source": [
     "# Indexing a list\n",
     "\n",
     "things_to_buy = [ 'apples','oranges','bread','milk']\n",
     "\n",
-    "a = things_to_buy[1]\n",
+    "a = things_to_buy[0]\n",
     "print(a)\n",
     "\n",
     "# Try changing the number in the [] and see what happens. "
