--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "id": "bb0a4a5b",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1306,18 +1306,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 \n",
-      "0 1 2 \n",
-      "0 1 2 \n"
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 \n"
      ]
     }
    ],
    "source": [
     "# Display the numbers 1 through 9 in a 3x3 square grid\n",
-    "\n",
+    "counter = 1\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
-    "        print(f\"{j}\", end = ' ')\n",
+    "        print(f\"{counter}\", end=' ')\n",
+    "        counter += 1\n",
     "    print()"
    ]
   },
@@ -1333,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "id": "ced82638",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1359,9 +1360,10 @@
    ],
    "source": [
     "# Display the numbers 1 through 100 in a 10x10 square grid. \n",
+    "\n",
     "for i in range(10):\n",
     "    for j in range(10):\n",
-    "        print(f\"{i}{j}\", end= ' ')\n",
+    "        print(f\"{i}{j}\", end=' ')\n",
     "    print()"
    ]
   },
@@ -1386,13 +1388,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "3b81fd1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  \n",
+      "*  *  \n",
+      "*  *  *  \n",
+      "*  *  *  *  \n",
+      "*  *  *  *  *  \n",
+      "*  *  *  *  *  *  \n"
+     ]
+    }
+   ],
    "source": [
     "# Display the asterisk pattern shown above\n",
-    "\n"
+    "\n",
+    "for i in range(1, 7):\n",
+    "    print(\"*  \" * i)\n"
    ]
   },
   {
