--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "ced82638",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1345,25 +1345,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00 01 02 03 04 05 06 07 08 09 \n",
-      "10 11 12 13 14 15 16 17 18 19 \n",
-      "20 21 22 23 24 25 26 27 28 29 \n",
-      "30 31 32 33 34 35 36 37 38 39 \n",
-      "40 41 42 43 44 45 46 47 48 49 \n",
-      "50 51 52 53 54 55 56 57 58 59 \n",
-      "60 61 62 63 64 65 66 67 68 69 \n",
-      "70 71 72 73 74 75 76 77 78 79 \n",
-      "80 81 82 83 84 85 86 87 88 89 \n",
-      "90 91 92 93 94 95 96 97 98 99 \n"
+      "01 02 03 04 05 06 07 08 09 10 \n",
+      "11 12 13 14 15 16 17 18 19 20 \n",
+      "21 22 23 24 25 26 27 28 29 30 \n",
+      "31 32 33 34 35 36 37 38 39 40 \n",
+      "41 42 43 44 45 46 47 48 49 50 \n",
+      "51 52 53 54 55 56 57 58 59 60 \n",
+      "61 62 63 64 65 66 67 68 69 70 \n",
+      "71 72 73 74 75 76 77 78 79 80 \n",
+      "81 82 83 84 85 86 87 88 89 90 \n",
+      "91 92 93 94 95 96 97 98 99 100 \n"
      ]
     }
    ],
    "source": [
     "# Display the numbers 1 through 100 in a 10x10 square grid. \n",
     "\n",
+    "counter = 1\n",
     "for i in range(10):\n",
     "    for j in range(10):\n",
-    "        print(f\"{i}{j}\", end=' ')\n",
+    "        name = str(counter)\n",
+    "        counter += 1\n",
+    "        if counter < 11:\n",
+    "            name = str(0) + name\n",
+    "        print(f\"{name}\", end = ' ')\n",
     "    print()"
    ]
   },
