--- a/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
+++ b/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -510,9 +510,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are  10  years old in decimal\n",
+      "You are  10  years old in hexadecimal\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test yourself\n",
     "\n",
@@ -523,7 +542,7 @@
     "\n",
     "print(\"You are \", age, \" years old in decimal\")\n",
     "\n",
-    "print(\"You are \", ..., \" years old in hexadecimal\")\n",
+    "print(\"You are \", age, \" years old in hexadecimal\")\n",
     "... # Print the age in octal\n",
     "... # Print the age in binary\n",
     "... # Print the age modulo 3\n",
@@ -546,15 +565,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Each kid gets  3  candy bars\n",
-      "There are  0  candy bars left over\n"
+      "Each kid gets  3  candy bars.\n",
+      "There are  0  candy bars left over.\n"
      ]
     }
    ],
@@ -565,10 +584,10 @@
     "candy_bars = 15\n",
     "\n",
     "candy_per_kid = 3  # Calculate the number of candy bars each kid gets\n",
-    "print(\"Each kid gets \", candy_per_kid, \" candy bars\")\n",
+    "print(\"Each kid gets \", candy_per_kid, \" candy bars.\")\n",
     "\n",
     "candy_left_over = 0  # Calculate the number of candy bars left over\n",
-    "print(\"There are \", candy_left_over, \" candy bars left over\")\n",
+    "print(\"There are \", candy_left_over, \" candy bars left over.\")\n",
     "\n"
    ]
   },
@@ -675,27 +694,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ellipsis\n"
+      "Hello! My Name Is Jude. How Are You Doing?\n"
      ]
     }
    ],
    "source": [
     "# Test Yourself\n",
     "\n",
-    "hello = ... # Define a string for hello\n",
-    "name = ...  # Your name\n",
-    "greet = ... # \n",
+    "hello = \"Hello!\" # Define a string for hello\n",
+    "name = \"My name is Jude.\"  # Your name\n",
+    "greet = \"How are you doing?\" # \n",
     "\n",
     "hello3 = \"HelloHelloHello\" # make your hello string repeat three times\n",
-    "s =  ... # Concatenate hello3, name and greet\n",
-    "titled = ... # Make it title case\n",
+    "s =  hello + \" \" + name + \" \" + greet # Concatenate hello3, name and greet\n",
+    "titled = s.title() # Make it title case\n",
     "\n",
     "print(titled) # Print the string"
    ]
