--- a/lessons/02_Loops/03a_Lists.ipynb
+++ b/lessons/02_Loops/03a_Lists.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apples\n"
+      "milk\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "\n",
     "things_to_buy = [ 'apples','oranges','bread','milk']\n",
     "\n",
-    "a = things_to_buy[0]\n",
+    "a = things_to_buy[-1]\n",
     "print(a)\n",
     "\n",
     "# Try changing the number in the [] and see what happens. "
@@ -143,13 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "183089f2",
    "metadata": {
     "lines_to_next_cell": 2,
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "oranges\n",
+      "bread\n",
+      "milk\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "things_to_buy = [ 'apples','oranges','bread','milk']\n",
@@ -187,12 +198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "15a2f38b",
    "metadata": {
     "title": "[python]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Things to buy:\n",
+      "apples\n",
+      "oranges\n",
+      "bread\n",
+      "milk\n",
+      "\n",
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "W\n",
+      "o\n",
+      "r\n",
+      "l\n",
+      "d\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "things_to_buy = [ 'apples','oranges','bread','milk']\n",
@@ -204,7 +239,7 @@
     " \n",
     "\n",
     "print()\n",
-    "for i in 'Hello WOrld':\n",
+    "for i in 'Hello World':\n",
     "    print(i)\n"
    ]
   },
@@ -244,10 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d63d5efe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'e', 'l', 'l', 'o', ' ', 'W', 'o', 'r', 'l', 'd', '!']\n",
+      "['H', 'e', 'l', 'l', 'o', ' ', 'W', 'o', 'r', 'l', 'd', '!']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Turn a string into a list:\n",
@@ -275,10 +319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9f82ddae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['One', 'Two', 'Three', 'Four']\n",
+      "['One', 'Two', 'Three', 'Four']\n"
+     ]
+    }
+   ],
    "source": [
     "# split a string at spaces, the default\n",
     "s = 'One Two Three Four'\n",
@@ -310,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "7bd259e4",
    "metadata": {},
    "outputs": [
