--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1147,20 +1147,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In 2014, I was 0 years old.\n",
-      "In 2015, I was 1 years old.\n",
-      "In 2016, I was 2 years old.\n",
-      "In 2017, I was 3 years old.\n",
-      "In 2018, I was 4 years old.\n",
-      "In 2019, I was 5 years old.\n",
-      "In 2020, I was 6 years old.\n",
-      "In 2021, I was 7 years old.\n",
-      "In 2022, I was 8 years old.\n",
-      "In 2023, I was 9 years old.\n",
-      "In 2024, I was 10 years old.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2985945329.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(\"In \" + str(i) \", \" + \"I was \" + age + \" years old.\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
@@ -1168,7 +1159,7 @@
     "# Your Code Here\n",
     "for i in range(2014, 2025):\n",
     "    age = i - 2014\n",
-    "    print(\"In \" +str(i)+\", I was \" +str(age)+ \" years old.\")"
+    "print(\"In \" + str(i) \", \" + \"I was \" + age + \" years old.\")"
    ]
   },
   {
