--- a/lessons/03_Data_Structures_Func/01_Functions.ipynb
+++ b/lessons/03_Data_Structures_Func/01_Functions.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Functions\n",
     "\n",
-    "We've seen functions a few times, but haven't explained how they work in detail. Let's eplore functions. \n",
+    "We've seen functions a few times, but haven't explained how they work in detail. Let's explore functions. \n",
     "\n",
     "A function looks like this:\n",
     "\n",
@@ -265,7 +265,6 @@
     "# Test yourself\n",
     "\n",
     "# Write your own find_char function that takes a character and a string\n",
-    "\n",
     "assert find_char('x', 'My fox likes bricks') == 5\n",
     "assert find_char('z', 'There is a zebra in the garden') == 11\n",
     "assert find_char('w', \"I've lost my shoes\") == -1"
@@ -310,23 +309,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Yourself\n",
     "\n",
     "# Write a function to add two numbers and return the result\n",
-    "\n",
+    "def add_numbers(x, y):\n",
+    "    return x + y\n",
+    "print(add_numbers(5, 5))\n",
     "# Write a function to subtract two numbers and return the result \n",
-    "\n",
+    "def sub_numbers(a, b):\n",
+    "    return a - b\n",
+    "print(sub_numbers(8, 5))\n",
     "# Write a function to print \"Same\" if two numbers are the same, otherwise print \"Different\"\n",
     "\n",
     "# Use your functions to show that  2 + 2 = 4\n",
-    "\n",
+    "print(add_numbers(2, 2))\n",
     "# Use your functions to show that  ( 5 + 3) - 2 = 6\n",
-    "\n",
-    "# Use your functions to show that  2 + 2  !=  3 + 3 = 6\n",
+    "print(sub_numbers(8, 2))\n",
+    "# Use your functions to show that  2 + 2  =  3 + 3 = 6\n",
     "\n"
    ]
   },
