--- a/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
+++ b/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
@@ -12,7 +12,7 @@
     "* Tuples. Like a list, but can't be changed after it is created. ( it's \"immutable\" )\n",
     "* Strings. Like a list, but always made of characters, and is also \"immutable\"\n",
     "\n",
-    "Lets introduce a new one: the `set`. A set is important because it works a bit\n",
+    "Let's introduce a new one: the `set`. A set is important because it works a bit\n",
     "like a list, except:\n",
     "\n",
     "* You create a set with \"{}\" instead of \"[]\"\n",
@@ -552,21 +552,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n"
+      "not funny\n",
+      "not funny\n",
+      "not funny\n",
+      "not funny\n",
+      "not funny\n",
+      "not funny\n",
+      "not funny\n",
+      "not funny\n"
      ]
     }
    ],
@@ -584,6 +584,16 @@
     "]\n",
     "\n",
     "def check_funny_words(sentence):\n",
+    "    if 'snollygoster' in funny_sentences:\n",
+    "        return 'funny'\n",
+    "    elif 'collywobble' in funny_sentences:\n",
+    "        return 'funny'\n",
+    "    elif 'lollygag' in funny_sentences:\n",
+    "        return 'funny'\n",
+    "    elif 'skedaddle' in funny_sentences:\n",
+    "        return 'funny'\n",
+    "    else:\n",
+    "        return 'not funny'\n",
     "    \"\"\"\n",
     "    Checks if any funny words are present in the given sentence.\n",
     "    \n",
