functions-day before summer

--- a/lessons/03_Data_Structures_Func/01_Functions.ipynb
+++ b/lessons/03_Data_Structures_Func/01_Functions.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,17 +341,13 @@
     "print(check_same(6, 6))\n",
     "print(check_same(10, 6))\n",
     "# Use your functions to show that  2 + 2 = 4\n",
-    "def show_answer(start, end, answer):\n",
-    "    print(f\"{start} + {end} = {answer}\")\n",
-    "show_answer(2, 2, 4)\n",
+    "\n",
+    "\n",
     "# Use your functions to show that  ( 5 + 3) - 2 = 6\n",
-    "def show_complex_answer(start, sum, end, answer):\n",
-    "    print(f\"({start} + {sum}) - {end} = {answer}\")\n",
-    "show_complex_answer(5, 3, 2, 6)\n",
+    "\n",
     "# Use your functions to show that  2 + 2  =  3 + 3 = 6\n",
-    "def show_equation(start, sum, start2, sum2, answer):\n",
-    "    print(f\"{start} + {sum} = {start2} + {sum2} = {answer}\")\n",
-    "show_equation(3, 3, 4, 2, 6)"
+    "print(f\"{add_numbers}\")\n",
+    "    "
    ]
   },
   {
