--- a/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
+++ b/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
@@ -552,20 +552,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not funny\n",
-      "not funny\n",
-      "not funny\n",
-      "not funny\n",
-      "not funny\n",
-      "not funny\n",
-      "not funny\n",
       "not funny\n"
      ]
     }
@@ -583,33 +576,20 @@
     "    \"The teacher was flummoxed by the students' whippersnapper antics during the lesson.\"\n",
     "]\n",
     "\n",
-    "def check_funny_words(sentence):\n",
-    "    if 'snollygoster' in funny_sentences:\n",
+    "def check_funny_words(x):\n",
+    "    if 'snollygoster' in x:\n",
     "        return 'funny'\n",
-    "    elif 'collywobble' in funny_sentences:\n",
+    "    elif 'collywobble' in x:\n",
     "        return 'funny'\n",
-    "    elif 'lollygag' in funny_sentences:\n",
+    "    elif 'lollygag' in x:\n",
     "        return 'funny'\n",
-    "    elif 'skedaddle' in funny_sentences:\n",
+    "    elif 'skedaddle' in x:\n",
     "        return 'funny'\n",
     "    else:\n",
     "        return 'not funny'\n",
-    "    \"\"\"\n",
-    "    Checks if any funny words are present in the given sentence.\n",
     "    \n",
-    "    Args:\n",
-    "        sentence (str): The sentence to check for funny words.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: If funny words are found, returns a string with the funny words separated by commas.\n",
-    "             If no funny words are found, returns \"Not funny\".\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # IMPLEMENT ME!\n",
-    "\n",
-    "\n",
-    "for s in funny_sentences:\n",
-    "    print(check_funny_words(s))\n"
+    "x = check_funny_words(funny_sentences)\n",
+    "print(x)"
    ]
   },
   {
