--- a/lessons/03_Data_Structures_Func/01_Functions.ipynb
+++ b/lessons/03_Data_Structures_Func/01_Functions.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,9 +315,13 @@
       "4\n",
       "same\n",
       "different\n",
-      "2 + 2 = 4\n",
+      "4\n",
+      "6\n",
       "(5 + 3) - 2 = 6\n",
-      "3 + 3 = 4 + 2 = 6\n"
+      "same\n",
+      "6\n",
+      "6\n",
+      "2 + 2 + 2 = 3 + 3 = 6\n"
      ]
     }
    ],
@@ -341,13 +345,22 @@
     "print(check_same(6, 6))\n",
     "print(check_same(10, 6))\n",
     "# Use your functions to show that  2 + 2 = 4\n",
-    "\n",
-    "\n",
+    "x = add_numbers(2, 2)\n",
+    "print(x)\n",
     "# Use your functions to show that  ( 5 + 3) - 2 = 6\n",
-    "\n",
-    "# Use your functions to show that  2 + 2  =  3 + 3 = 6\n",
-    "print(f\"{add_numbers}\")\n",
-    "    "
+    "y = add_numbers(5, 3)\n",
+    "z = sub_numbers(y, 2)\n",
+    "print(z)\n",
+    "print(\"(5 + 3) - 2 = 6\")\n",
+    "# Use your functions to show that  2 + 2 + 2 = 3 + 3 = 6\n",
+    "a = add_numbers(2, 2)\n",
+    "b = add_numbers(a, 2)\n",
+    "c = add_numbers(3, 3)\n",
+    "d = check_same(b, c)\n",
+    "print(d)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(\"2 + 2 + 2 = 3 + 3 = 6\")"
    ]
   },
   {
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
