--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1147,22 +1147,39 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2014\u001b[39m, \u001b[38;5;241m2025\u001b[39m):\n\u001b[1;32m      3\u001b[0m     age \u001b[38;5;241m=\u001b[39m i \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2014\u001b[39m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIn \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mI was \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mage\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m years old.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In 2014, I was born.\n",
+      "In 2015, I was 1 year old.\n",
+      "In 2016, I was 2 years old.\n",
+      "In 2017, I was 3 years old.\n",
+      "In 2018, I was 4 years old.\n",
+      "In 2019, I was 5 years old.\n",
+      "In 2020, I was 6 years old.\n",
+      "In 2021, I was 7 years old.\n",
+      "In 2022, I was 8 years old.\n",
+      "In 2023, I was 9 years old.\n",
+      "In 2024, I was 10 years old.\n",
+      "It is 2025 so I am now 11 years old.\n",
+      "In 2026, I am going to be 12 years old.\n"
      ]
     }
    ],
    "source": [
     "# Your Code Here\n",
-    "for i in range(2014, 2025):\n",
+    "for i in range(2014, 2027):\n",
     "    age = i - 2014\n",
-    "print(\"In \" + str(i) + \", \" + \"I was \" + age + \" years old.\")"
+    "    if i == 2014:\n",
+    "        print(f\"In {i}, I was born.\")\n",
+    "    elif i == 2015:\n",
+    "        print(f\"In {i}, I was {age} year old.\")\n",
+    "    elif i == 2026:\n",
+    "        print(f\"In {i}, I am going to be {age} years old.\")\n",
+    "    elif i == 2025:\n",
+    "        print(f\"It is {i} so I am now {age} years old.\")\n",
+    "    else:\n",
+    "        print(f\"In {i}, I was {age} years old.\")"
    ]
   },
   {
