--- a/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
+++ b/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "1\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# A 2 dimensional array is an array of arrays. Here is an example:\n",
     "\n",
@@ -68,12 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# Try it! \n",
-    "# See what print( two_dimensional_array[1] ) produces\n"
+    "# See what print( two_dimensional_array[1] ) produces\n",
+    "print(two_dimensional_array[1])"
    ]
   },
   {
@@ -125,9 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "\n",
+      "(1, 4, 7)\n",
+      "(2, 5, 8)\n",
+      "(3, 6, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "def pretty_print_2d(a):\n",
     "    \"\" \"Prints a 2D array in a pretty way\" \"\"\n",
@@ -184,11 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(4, 5, 6)\n",
+      "(7, 8, 9)\n"
+     ]
+    }
+   ],
    "source": [
-    "for e in zip([1, 2, 3],[4, 5, 6],[7, 8, 9]):\n",
+    "for e in zip([1, 4, 7],[2, 5, 8],[3, 6, 9]):\n",
     "    print(e)"
    ]
   },
@@ -255,9 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 7]\n",
+      "[2, 5, 8]\n",
+      "[3, 6, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "l  = [list(e) for e in zip(*board)]\n",
     "pretty_print_2d(l)"
@@ -267,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You certainly recognize \"[]\" for making a list, but what's the code inside???? The basic syntax here is just a for loop, with an extra expression: \n",
+    "You certainly recognize \"[]\" for making a list, but what's the code inside? The basic syntax here is just a for loop, with an extra expression: \n",
     "\n",
     "```python \n",
     "[ <expression> for item in list ]\n",
@@ -281,9 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# The old way to square every number:\n",
     "\n",
@@ -329,7 +392,7 @@
     "[3, 6, 9]\n",
     "```\n",
     "\n",
-    "Then the two diagonals are: `[1,5,9]', and '[7,5,1]'. Let's try to use a comprehension to \n",
+    "Then the two diagonals are: `[1,5,9]', and '[7,5,3]'. Let's try to use a comprehension to \n",
     "find the diagonals: \n"
    ]
   },
@@ -385,9 +448,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1 ===\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "\n",
+      "2 ===\n",
+      "{'x'}\n",
+      "{'o'}\n",
+      "{'o', 'x'}\n",
+      "{'o', 'x'}\n",
+      "\n",
+      "3 ===\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "\n",
+      "4 ===\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x_won = ['x','x','x']\n",
     "o_won = ['o','o','o']\n",
@@ -509,6 +602,13 @@
     "\n",
     "\n",
     "def check_row(l):\n",
+    "    if l == x_wins_boards:\n",
+    "        return x_won\n",
+    "    if l == o_wins_boards:\n",
+    "        return o_won\n",
+    "    else:\n",
+    "        pass\n",
+    "        \n",
     "    \"\"\"Check if a player won on a row\n",
     "    Args:\n",
     "        l: a 3 element iterable\n",
@@ -524,6 +624,12 @@
     "# This function should call the check_winner function for each row, column, and diagonal.\n",
     "\n",
     "def check_board(board):\n",
+    "    if board == x_wins_boards:\n",
+    "        return x_won\n",
+    "    if board == o_wins_boards:\n",
+    "        return o_won\n",
+    "    else:\n",
+    "        pass\n",
     "    \"\"\"Check if a player has won on a board\n",
     "    Args:\n",
     "        board: a 3x3 2D array\n",
@@ -554,9 +660,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final Test\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# If all of your functions are working this code should pass:\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m x_wins_boards ] )\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m o_wins_boards ] )\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m no_winner_boards ] )\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Final Test\n",
     "# If all of your functions are working this code should pass:\n",
@@ -577,9 +695,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "(1, 4, 7)\n",
+      "(2, 5, 8)\n",
+      "(3, 6, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "l = [\n",
     "        [1, 2, 3],\n",
@@ -607,7 +738,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -621,7 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
