started tic tac toe

--- a/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
+++ b/lessons/02_Loops/07_For_Loop_Gauntlet.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "6db862fd",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -1151,7 +1151,7 @@
      "output_type": "stream",
      "text": [
       "In 2014, I was born.\n",
-      "In 2015, I was 1 year old.\n",
+      "In 2015, I became 1 year old\n",
       "In 2016, I was 2 years old.\n",
       "In 2017, I was 3 years old.\n",
       "In 2018, I was 4 years old.\n",
@@ -1172,12 +1172,12 @@
     "    age = i - 2014\n",
     "    if i == 2014:\n",
     "        print(f\"In {i}, I was born.\")\n",
-    "    elif i == 2015:\n",
-    "        print(f\"In {i}, I was {age} year old.\")\n",
     "    elif i == 2026:\n",
     "        print(f\"In {i}, I am going to be {age} years old.\")\n",
     "    elif i == 2025:\n",
     "        print(f\"It is {i} so I am now {age} years old.\")\n",
+    "    elif i == 2015:\n",
+    "        print(f\"In {i}, I became {age} year old\")\n",
     "    else:\n",
     "        print(f\"In {i}, I was {age} years old.\")"
    ]
