--- a/lessons/03_Data_Structures_Func/01_Functions.ipynb
+++ b/lessons/03_Data_Structures_Func/01_Functions.ipynb
@@ -316,11 +316,12 @@
       "same\n",
       "different\n",
       "4\n",
+      "2 + 2 = 4\n",
       "6\n",
       "(5 + 3) - 2 = 6\n",
+      "6\n",
+      "6\n",
       "same\n",
-      "6\n",
-      "6\n",
       "2 + 2 + 2 = 3 + 3 = 6\n"
      ]
     }
@@ -347,19 +348,20 @@
     "# Use your functions to show that  2 + 2 = 4\n",
     "x = add_numbers(2, 2)\n",
     "print(x)\n",
+    "print(\"2 + 2 = 4\")\n",
     "# Use your functions to show that  ( 5 + 3) - 2 = 6\n",
-    "y = add_numbers(5, 3)\n",
-    "z = sub_numbers(y, 2)\n",
-    "print(z)\n",
+    "a = add_numbers(5, 3)\n",
+    "b = sub_numbers(a, 2)\n",
+    "print(b)\n",
     "print(\"(5 + 3) - 2 = 6\")\n",
     "# Use your functions to show that  2 + 2 + 2 = 3 + 3 = 6\n",
-    "a = add_numbers(2, 2)\n",
-    "b = add_numbers(a, 2)\n",
-    "c = add_numbers(3, 3)\n",
-    "d = check_same(b, c)\n",
+    "c = add_numbers(2, 2)\n",
+    "d = add_numbers(c, 2)\n",
     "print(d)\n",
-    "print(b)\n",
-    "print(c)\n",
+    "e = add_numbers(3, 3)\n",
+    "print(e)\n",
+    "f = check_same(d, e)\n",
+    "print(f)\n",
     "print(\"2 + 2 + 2 = 3 + 3 = 6\")"
    ]
   },
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +512,7 @@
     }
    ],
    "source": [
-    "for e in  [0,1, 65, 'Bob', 23,'larry']:\n",
+    "for e in  [0, 1, 65, 'Bob', 23,'larry']:\n",
     "\n",
     "    try:\n",
     "        i = int(e)\n",
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
